aelys/tests/modules/errors/not_found.aelys
// not_found.aelys - Should error for nonexistent module
needs nonexistent
